--- a/apps/public/stylesheet/style.css
+++ b/apps/public/stylesheet/style.css
@@ -9,4 +9,11 @@ body {
 
 h1 {text-align: center;}
 p {text-align: center;}
-img {text-align: center;}
+div {text-align: center;}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
